test/files/neg/t12159b/J_1.java
// javaVersion: 17+

package p;

public final class J_1 implements I_1 {
}
